# amelia

./: .gitignore  CMakeLists.txt  LICENSE.BSD  README.md  amelia.pro  common.pri  compile  config.h.cmake
src/: AAnimationGUI.cpp  AAnimationGUI.h  ABase.cpp  ABase.h  AComboTableModel.h  AEventInfoScene.cpp  AEventInfoScene.h  AEventManager.cpp  AEventPackage.cpp  AEventPackage.h  AGeometry.cpp  AGeometry.h  AHelixSceneNode.cpp  AInterestingTrackTableModel.cpp  ALayerGUI.cpp  ALayerGUI.h  AMainView.cpp  AMenu.cpp  ASelectionInfoScene.cpp  ATourBuilder.cpp  ATourManager.cpp  ATrack.cpp  ATrack.h  ATrack3DNode.cpp  ATrack3DNode.h  ATrackCombination.cpp  ATrackCombination.h  ATrackTableModel.cpp  AUILoader.cpp  AUILoader.h  AViewport.cpp  AViewport.h  AXmlEvent.cpp  AXmlEvent.h  Amelia.cbp  CMakeLists.txt  CRelativeScaleSceneNodeAnimator.h  CSceneNodeAnimatorCameraSphere.cpp  CSceneNodeAnimatorCameraSphere.h  QGraphicsClickablePixmapItem.cpp  (+7 more)
src/abase/: ABase.cpp  ABase.h  AMonitor.cpp  AMonitor.h  AMonitorGroup.cpp  CMakeLists.txt  abase.pro
src/acontextmedia/: AContextMedia.cpp  AContextMedia.h  ACustomPlayer.h  CMakeLists.txt  acontextmedia.qrc
src/acutehistogram/: ACuteHistogram.cpp  ACuteHistogram.h  AHistogramWidget.cpp  AHistogramWidget.h  acutehistogram.qrc  plugin.xml
src/aeventmanager/: ACalorimeterFilter.cpp  ACalorimeterFilter.h  AEvent.cpp  AEvent.h  AEventAnalysisData.cpp  AEventAnalysisData.h  AEventManager.cpp  AEventManager.h  AEventManagerDefines.h  AEventManagerScene.cpp  AEventManagerScene.h  AEventManagerTreeView.cpp  AEventManagerTreeView.h  AEventObject.cpp  AEventObject.h  AEventObjectCollection.cpp  AEventObjectCollection.h  AEventObjectFilter.cpp  AEventPackage.cpp  AEventPackage.h  AFCALShower.cpp  AFilteredEvent.cpp  AFilteredEvent.h  AJet.cpp  AJet.h  AMisET.cpp  AMisET.h  AModelFilter.cpp  AModelFilter.h  AParticleFilter.cpp  AParticleFilter.h  APtFilter.cpp  APtFilter.h  ARTrack.cpp  ARTrack.h  ASTrack.cpp  ASTrack.h  AShower.cpp  AShower.h  ATrack.cpp  (+12 more)
src/ageometry/: AAdvancedEventSettings.cpp  AAdvancedEventSettings.h  ACaloTower3DNode.cpp  ACaloTower3DNode.h  AComboTableModel.cpp  AComboTableModel.h  AEventInfoScene.h  AEventObject3DNode.cpp  AEventObject3DNode.h  AFOVControl.h  AFPSControl.cpp  AFPSControl.h  AGeoPlugin.cpp  AGeoPlugin.h  AGeometry.cpp  AGeometry.h  AGeometryHUD.cpp  AGeometryHUD.h  AHelix3DNode.cpp  AHelix3DNode.h  AInterestingTrackTableModel.cpp  AInterestingTrackTableModel.h  AJet3DNode.cpp  AJet3DNode.h  ALayerGUI.cpp  ALayerGUI.h  ALineNode.h  AMisET3DNode.cpp  AMisET3DNode.h  APoint3D.h  ARTrack3DNode.cpp  ARTrack3DNode.h  ASTrack3DNode.cpp  ASTrack3DNode.h  ASelectionInfoScene.cpp  ASelectionInfoScene.h  ASnapshotTool.cpp  ATourBuilder.h  ATourManager.cpp  ATrack3DNode.h  (+26 more)
src/ageometry-svn/: ACameraControl.cpp  AComboTableModel.cpp  AComboTableModel.h  AEventInfoScene.cpp  AFPSControl.cpp  AGeoPlugin.cpp  AGeoPlugin.h  AGeometry.cpp  AGeometry.h  AGeometryHUD.cpp  AGeometryHUD.h  AInterestingTrackTableModel.cpp  AInterestingTrackTableModel.h  AJet3DNode.cpp  ALayerGUI.cpp  APoint3D.h  ASTrack3DNode.cpp  ASTrack3DNode.h  ASelectionInfoScene.cpp  ASphereControl.h  ATourManager.h  ATrack3DNode.cpp  ATrackTableModel.cpp  AViewport.h  CMakeLists.txt  CRelativeScaleSceneNodeAnimator.cpp  CSceneNodeAnimatorCameraFOV.cpp  CSceneNodeAnimatorCameraFOV.h  CSceneNodeAnimatorCameraOrbit.h  CSceneNodeAnimatorCameraSwitch.cpp  QIrrWidget.cpp  QIrrWidget.h  QTableViewWithContextMenu.h  ageometry.qrc  geometry.ui
src/ahist/: AComboHistogram.cpp  AComboHistogram.h  AHistPlugin.h  ATest.cpp  ATest.h  AllHistograms.cpp  CMakeLists.txt  acombohistogram.ui  histograms.ui  plugin.xml
src/alabnotebook/: ALabNoteBook.cpp  ALabNoteBookData.cpp  ALabNoteBookEntry.cpp  ALabNoteBookEntry.h  ALabNoteBookTableModel.cpp  ALabNoteBookWidget.cpp  ALabNoteBookWidget.h  CMakeLists.txt  alabnotebook.qrc  labnotebook.ui  plugin.xml
src/astart/: AStartPlugin.cpp  AStartPlugin.h  CMakeLists.txt  plugin.xml
src/atours/: ATour.h  ATourAction.cpp  ATourAction.h  ATourActionGroup.h  ATourBlock.cpp  ATourBlock.h  ATourBookmarkAction.h  ATourBuilder.cpp  ATourCameraAction.cpp  ATourCameraAction.h  ATourLoadEventAction.cpp  ATourLoadEventAction.h  ATourManager.h  ATourMessageAction.cpp  ATourMonitorAction.h  ATourMouseConnectAction.cpp  ATourMouseConnectAction.h  ATourMouseMoveAction.cpp  ATourParticleFilterAction.cpp  ATourPlayer.cpp  ATourPlayer.h  ATourPtCutAction.cpp  ATourPtCutAction.h  ATourSelectTrackAction.cpp  ATourViewportChangeAction.cpp  ATours.cpp  CMakeLists.txt
src/aweb/: ADropDownMenu.h  AWebDefines.h  AWebPlugin.cpp  AWebView.cpp  AWebView.h  CMakeLists.txt  browser.ui
src/libamelia/: AAnimationGUI.cpp  AAnimationLayoutGUI.cpp  AAnimationLayoutGUI.h  ADefines.h  AHideAButton.cpp  AHideAButton.h  AMELIA.cpp  AMELIA.h  AMainView.h  AMainViewTmpWidget.h  APlugin.h  ASlidyFlap.cpp  ASlidyManager.cpp  ASlidyManager.h  ASlidyWidget.cpp  ASlidyWidget.h  AVector.h  CMakeLists.txt  QBetterMimeData.cpp  QBoolSync.h  QDoubleSync.cpp  QFaderWidget.cpp  QFaderWidget.h  QGraphicsClickablePixmapItem.cpp  QGraphicsClickablePixmapItem.h  QGraphicsClickableSimpleTextItem.h  QGraphicsItemLayout.cpp  QGraphicsItemLayout.h  QTimeLineProxy.cpp  QTimeLineProxy.h  QWaitForReady.cpp  amelia.qrc  libamelia.pro
src/template/: CMakeLists.txt  ahist.qrc
trunk/: CMakeLists.txt  Doxyfile  amelia.desktop  compile
trunk/media/: ageometry.qrc
trunk/src/: AAdvancedEventSettings.cpp  AAdvancedEventSettings.h  AAnimationGUI.cpp  AAnimationGUI.h  ABase.cpp  ABase.h  AComboTableModel.cpp  AEventInfoScene.cpp  AEventInfoScene.h  AEventManager.cpp  AEventManager.h  AEventPackage.cpp  AEventPackage.h  AGeometry.cpp  AGeometry.h  AHelixSceneNode.cpp  AHelixSceneNode.h  AInterestingTrackTableModel.cpp  AInterestingTrackTableModel.h  ALayerGUI.cpp  ALayerGUI.h  AMainView.cpp  AMainView.h  AMenu.h  ASelectionInfoScene.cpp  ASelectionInfoScene.h  ATourManager.cpp  ATourManager.h  ATrack.cpp  ATrack.h  ATrack3DNode.cpp  ATrack3DNode.h  ATrackCombination.cpp  AUILoader.cpp  (+20 more)
(+318 files in other folders)
