CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Amelia)

SET(CMAKE_INCLUDE_CURRENT_DIR true)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/plugins)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
FIND_PACKAGE (Qt4 REQUIRED)

IF(${QT_VERSION_MINOR} LESS 4)
  MESSAGE(FATAL_ERROR "Need Qt 4.4.0 at least")
ENDIF(${QT_VERSION_MINOR} LESS 4)

INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR} src/)
INCLUDE(${QT_USE_FILE})

SET(amelia_SRCS
  src/main.cpp
  )

SET(amelia_H
  )

ADD_SUBDIRECTORY(src)

QT4_WRAP_CPP(amelia_SRCS ${amelia_H})
ADD_EXECUTABLE(AmeliaApp ${amelia_SRCS})
INCLUDE_DIRECTORIES(src/libamelia)
TARGET_LINK_LIBRARIES(AmeliaApp
  ${QT_LIBRARIES} 
  amelia
  )
