OPTION(ENABLE_ABASE "build abase" ON)
OPTION(ENABLE_AWEB "build aweb" ON)
OPTION(ENABLE_ASTART "build astart" ON)
OPTION(ENABLE_AEVENTMANAGER "build aeventmanager" ON)
OPTION(ENABLE_AGEOMETRY "build ageometry" ON)
OPTION(ENABLE_AHIST "build ahist" ON)
OPTION(ENABLE_ALABNOTEBOOK "build alabnotebook" ON)
OPTION(ENABLE_ACONTEXTMEDIA "build acontextmedia" ON)
OPTION(ENABLE_ATOURS "build atours" ON)
OPTION(ENABLE_ACUTEHISTOGRAM "build acutehistogram" OFF)

ADD_SUBDIRECTORY(libamelia)

# Plugins start here :)
INCLUDE_DIRECTORIES(libamelia)

IF(ENABLE_ABASE)
  ADD_SUBDIRECTORY(abase)
ENDIF(ENABLE_ABASE)

IF(ENABLE_AWEB)
  ADD_SUBDIRECTORY(aweb)
ENDIF(ENABLE_AWEB)

IF(ENABLE_ASTART)
  ADD_SUBDIRECTORY(astart)
ENDIF(ENABLE_ASTART)

IF(ENABLE_AEVENTMANAGER)
  ADD_SUBDIRECTORY(aeventmanager)
ENDIF(ENABLE_AEVENTMANAGER)

IF(ENABLE_AGEOMETRY)
  ADD_SUBDIRECTORY(ageometry)
ENDIF(ENABLE_AGEOMETRY)

IF(ENABLE_AHIST)
  ADD_SUBDIRECTORY(ahist)
ENDIF(ENABLE_AHIST)

IF(ENABLE_ALABNOTEBOOK)
  ADD_SUBDIRECTORY(alabnotebook)
ENDIF(ENABLE_ALABNOTEBOOK)

IF(ENABLE_ACONTEXTMEDIA)
  ADD_SUBDIRECTORY(acontextmedia)
ENDIF(ENABLE_ACONTEXTMEDIA)

IF(ENABLE_ATOURS)
  ADD_SUBDIRECTORY(atours)
ENDIF(ENABLE_ATOURS)

IF(ENABLE_ACUTEHISTOGRAM)
  ADD_SUBDIRECTORY(acutehistogram)
ENDIF(ENABLE_ACUTEHISTOGRAM)
