SET(QT_USE_QTOPENGL true)
SET(QT_USE_QTUITOOLS true)

FIND_PACKAGE (Qt4 REQUIRED)
INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR})
INCLUDE(${QT_USE_FILE})


ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_SHARED)

SET(abase_SRCS
  ABase.cpp
  AMonitorGroup.cpp
  AMonitor.cpp)

SET(abase_H
  ABase.h
  AMonitorGroup.h
  AMonitor.h)

SET(abase_FILES
  media/media.qrc)

QT4_WRAP_CPP(abase_SRCS ${abase_H})
QT4_ADD_RESOURCES(abase_SRCS ${abase_FILES})

ADD_LIBRARY(ABase SHARED ${abase_SRCS})
TARGET_LINK_LIBRARIES(ABase
  ${QT_LIBRARIES}
  amelia)
