SET(QT_USE_PHONON 1)

FIND_PACKAGE (Qt4 REQUIRED)
INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR})
INCLUDE(${QT_USE_FILE})


ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

SET(astart_SRCS
  AStartPlugin.cpp)

SET(astart_H
  AStartPlugin.h)

SET(astart_FILES
  plugin.qrc)

QT4_WRAP_CPP(astart_SRCS ${astart_H})
QT4_ADD_RESOURCES(astart_SRCS ${astart_FILES})

ADD_LIBRARY(AStart SHARED ${astart_SRCS})
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
TARGET_LINK_LIBRARIES(AStart
  ${QT_LIBRARIES} 
  amelia
  ABase)
