#SET(QT_USE_QTWEBKIT 1)

FIND_PACKAGE (Qt4 REQUIRED)
INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR})
INCLUDE(${QT_USE_FILE})


ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

SET(template_SRCS
  NewPlugin.cpp)

SET(template_H
  NewPlugin.h)

SET(template_FILES
  ahist.qrc)

QT4_WRAP_CPP(template_SRCS ${template_H})
QT4_ADD_RESOURCES(template_SRCS ${template_FILES})

ADD_LIBRARY(Template SHARED ${template_SRCS})
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
TARGET_LINK_LIBRARIES(Template
  ${QT_LIBRARIES} 
  amelia)
